# jav-trans

./: .env.example  .gitignore  ASR前置切分架构优化方案_Scorer拆分与SplitModel设计.md  HISTORY-archive.md  HISTORY.md  LICENSE  README.md  cc-connect模板.md  grok-search-mcp部署文档.md  launcher.py  plan.md  pyproject.toml  requirements.txt  run_web.py
docs/: HISTORY.md  README.md  cueqc_mamba_v2_plan.md  cueqc_mamba_v3_plan_extracted.md
models/: README.md
packaging/: README.md  archive_release.ps1  build_windows.ps1  jav-trans-web.spec  javtrans-web.spec  prepare_default_model.py
scripts/: asr_backends_compare.py  benchmark_asr.py
src/: main.py
subtitle_qc/: README.md  compare_asr_backends.py  compare_vad.py  evaluate_reference.py  generate.py  review_content.py  tune_vad.py
tests/: conftest.py  helpers.py  test_acoustic_split_candidate_audit.py  test_acoustic_split_canonical_teacher.py  test_acoustic_split_event_group_audit.py  test_acoustic_split_v3_model.py  test_acoustic_split_v3_runtime.py  test_acoustic_split_v3_trainer.py  test_acoustic_split_v4_model.py  test_acoustic_split_v4_runtime.py  test_acoustic_split_v4_trainer.py  test_align_batch_size.py  test_align_log.py  test_aligned_segments_cache.py  test_aligner_decoupled.py  test_alignment_diagnostics_compare.py  test_alignment_failure_audio_materialize.py  test_alignment_failure_manifest.py  test_alignment_failure_subtype_analysis.py  test_alignment_quality.py  test_alignment_sentinel_island_split.py  test_anime_whisper_postclean.py  test_apply_joint_split_cueqc_calibration.py  test_apply_semantic_event_repairs.py  test_asr_alignment_diagnostics.py  test_asr_attribution_audit.py  test_asr_b4_b5.py  test_asr_backend_dispatch.py  test_asr_checkpoint_backend_key.py  test_asr_chunking.py  (+238 more)
(+672 files in other folders)
