[project]
name = "jav-trans"
version = "0.1.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--basetemp=temp/pytest_verify",
    "-p",
    "no:cacheprovider",
]

norecursedirs = [
    ".venv",
    ".pytest_cache",
    "__pycache__",
    "agents",
    "models",
    "video",
]
